# ProPosAgent003

./: README.md  a2a_protocol.py  agent_core.py  example.env  generic_agent.py  mcp.env.example  next.config.js  package.json  pyproject.toml  requirements.txt  streamlit_app.py  utils.py
.streamlit/: config.toml
examples/: README.md  searxng_client.py
mcp/searxng/: Dockerfile  README.md  example-mcp.env  mcp_api.py  settings.yml
src/pydantic_agent/: __init__.py  a2a_protocol.py  agent.py  mcp_client.py  models.py  supabase_client.py
src/pydantic_agent/tools/: __init__.py  mcp_tools.py
