[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "propos-agent"
version = "0.3.0"
authors = [
  { name="Matthew Schultz", email="your.email@example.com" },
]
description = "ProPosition AI Agent with MCP and A2A protocol integration"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pro-position-ai/ProPosAgent003"
"Bug Tracker" = "https://github.com/pro-position-ai/ProPosAgent003/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pydantic_agent"]
